<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/picker_app"
        app:layout_constraintEnd_toEndOf="@id/right_margin"
        app:layout_constraintStart_toStartOf="@id/left_margin"/>
    <TextView
        android:id="@+id/picker_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/picker_app"
        app:layout_constraintBottom_toTopOf="@id/mid_guide"
        app:layout_constraintEnd_toEndOf="@id/right_margin"
        app:layout_constraintStart_toStartOf="@id/left_margin"/>


    <Spinner
        android:id="@+id/roles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        app:layout_constraintEnd_toEndOf="@id/right_margin"
        app:layout_constraintStart_toStartOf="@id/left_margin"
        app:layout_constraintBottom_toTopOf="@id/username"  />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@id/right_margin"
        app:layout_constraintStart_toStartOf="@id/left_margin" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:text=""
        app:layout_constraintEnd_toEndOf="@id/right_margin"
        app:layout_constraintStart_toStartOf="@id/left_margin"
        app:layout_constraintBottom_toTopOf="@id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:onClick="signIn"
        app:layout_constraintEnd_toEndOf="@id/right_margin"
        app:layout_constraintStart_toStartOf="@id/left_margin"
        app:layout_constraintBottom_toTopOf="@id/bottom_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="64dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="64dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="64dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mid_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4" />

</androidx.constraintlayout.widget.ConstraintLayout>